--- a/assets/mainstyle.css
+++ b/assets/mainstyle.css
@@ -561,13 +561,95 @@ nav .nav-right a > i{
         padding: 5px 110px; 
         width: 100%
         }   */
-        
     
+    nav {
+        height: 70px;
+        width: 100%;
+        padding: 0 2rem;
+        display: flex;
+        justify-content: space-between;
+        background-color: #fff;
+        box-shadow: 0px 1px 3px #ccc;
+        position: sticky;
+        top: 0;
+        z-index: 99;  }
+    
+    nav .nav-left > img {
+        width: 100%;
+        max-width: 57px;
+        margin-left: -15px;
+        margin-right: 2px;  }     
 
+    .test {
+        /* background: black; */
+        /* background: url(./images/dp.png); */
+        /* margin: auto; */
+        margin-left: -37px;
+        margin-bottom: 1px;
+        display: flex;
+        padding: 0px; 
+        margin-right: 20px }
+               
+    .profile {
+        background: url(./images/dp.png);
+        height: 30px;
+        width: 30px;
+        background-size: cover;
+        border-radius: 50%;
+        cursor: pointer;
+        /* background: black; */
+        margin-left: 0px;   }
     
+    .dk {
+        border: none !important;
+        background: transparent;
+        width: 7px;
+        margin: 10px;
+        padding: 5px;
+        font-size: 24px;
+        margin-bottom: 3px;  }
     
+    nav .nav-left > input {
+        height: 40px;
+        padding: 5px 10px;
+        border: none;
+        border-radius: 25px;
+        outline: none;
+        background-color: #eee;
+        margin-left: 10px;  }
     
-    .left-panel { display: block; 
+    nav .nav-middle a {
+        text-decoration: none;
+        color: #333;
+        padding: 7px;
+        margin: 0px 10px;  }
+    
+    nav .nav-middle {
+        /* display: flex; */
+        /* padding-bottom: 5px; */
+        margin-left: 67px;
+        /* margin-bottom: 0; */
+        /* padding-right: 5px; */ }
+    
+    nav .nav-middle a.active {
+        color: royalblue;
+        position: relative;
+        /* padding: 4px; */
+        padding-right: 1px;
+        padding-left: 3px;
+        padding-bottom: 5px;  }
+    
+    nav .nav-middle a.active::after {
+        content: '';
+        width: 100%;
+        height: 3px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: royalblue;  }   
+      
+    .left-panel { 
+        display: block; 
         position: relative !important; 
         flex: none; 
         width: 100%; }
