--- a/assets/mainstyle.css
+++ b/assets/mainstyle.css
@@ -410,7 +410,7 @@ nav .nav-right a > i{
         height: 185px; }
 
     nav {
-        height: 70px;
+        height: 105px;
         width: 100%;
         padding: 0 2rem;
         display: flex;
@@ -418,7 +418,7 @@ nav .nav-right a > i{
         background-color: #fff;
         box-shadow: 0px 1px 3px #ccc;
         position: sticky;
-        top: 0;
+        top: 5px;
         z-index: 99;  }
 
     nav .nav-left > img {
